changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -188,6 +188,25 @@
 
 
 <div class="mem">
+	  <a href="rhein.html"> 
+      <div class="mugshot" style="background-image: url(/img/er_500.png);"></div>
+      <div class="info">
+        <h3>Eduardo Luiz Rhein</h3>
+	
+        <p class="title">Bachelor student. In my Bachelor thesis, I study implementing and analyzing content-adaptive subsampling for image compression. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:rhein@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="schillen.html"> 
       <div class="mugshot" style="background-image: url(/img/as_500.png);"></div>
       <div class="info">
@@ -229,7 +248,7 @@
       <div class="info">
         <h3>Enis Can Simsek</h3>
 	
-        <p class="title">Bachelor student. In my Bachelor thesis, I study the contrast constancy with supra-threshold contrast using MLCM. </p>
+        <p class="title">Bachelor student. In my Bachelor thesis, I study contrast constancy with supra-threshold contrast using MLCM. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
