changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -476,27 +476,21 @@
 
     
   </section>
-  <br />
-</body>
-</html>
-
-
-
- </section>
 
 
  <br />
-  <h2>Alumni Students</h2>
+  <h2>Alumni - Bachelor students</h2>
 
   <h4>Marcus Bindermann</h4>
   <h4>Poulami Ghosh</h4>
   <h4>Nico Kestel</h4> 
   <h4>Amanda Maiwald</h4>
   <h4>Christian Wohlhaupt</h4>	
+  
+ <h2>Alumni - Master students</h2>
 
-
-    
-  </section>
   <br />
+
+
 </body>
 </html>
