changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -188,6 +188,24 @@
 
 
 <div class="mem">
+	  <a href="oezkaya.html"> 
+      <div class="mugshot" style="background-image: url(/img/io_500.png);"></div>
+      <div class="info">
+        <h3>Iris Özkaya</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study whether the physical contrast of the background has an effect on the perceived contrast of the transparent medium, thus can influence the perceived transparency of the medium. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:iris.oezkaya@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="rhein.html"> 
       <div class="mugshot" style="background-image: url(/img/er_500.png);"></div>
       <div class="info">
