changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -193,7 +193,7 @@
       <div class="info">
         <h3>Iris Özkaya</h3>
 	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study whether the physical contrast of the background has an effect on the perceived contrast of the transparent medium, thus can influence the perceived transparency of the medium. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the effect of background contrast on perceived contrast and perceived transparency. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
