changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -187,6 +187,26 @@
 
 
 
+
+<div class="mem">
+	  <a href="kiran.html"> 
+      <div class="mugshot" style="background-image: url(/img/bk_500.png);"></div>
+      <div class="info">
+        <h3>Burak Kiran</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I will focus on the relationship between discrimination and scaling methods in the domain of contrast perception. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:burakkiran1226@gmail.com"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
 <div class="mem">
 	  <a href="oezkaya.html"> 
       <div class="mugshot" style="background-image: url(/img/io_500.png);"></div>
