changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -198,7 +198,7 @@
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:burakkiran1226@gmail.com"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:kiran@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
