changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -118,22 +118,22 @@
  
 
 
-
 <div class="mem">
-	  <a href="gruenwald.html"> 
-      <div class="mugshot" style="background-image: url(/img/jg_500.png);"></div>
+	  <a href="chamani.html"> 
+      <div class="mugshot" style="background-image: url(/img/sc_500.png);"></div>
       <div class="info">
-        <h3>Jakob Grünwald</h3>
+        <h3>Sam Chamani</h3>
 	
-        <p class="title">Bachelor Student. In my Internship, I study stochastic dependencies in scaling methods, in particular MLDS. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study perception of transparency and contrast in variegated checkerboards with transparent media of low luminance values. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:jakob@gruenwald-bs.de"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:sam.chamani@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
     </div>
+
 
 
 <div class="mem">
@@ -459,6 +459,7 @@
 
   <h4>Marcus Bindermann</h4> 
   <h4>Yasin Mehmet Cifci</h4> 
+  <h4>Jakob Grünwald</h4>
   <h4>Nico Kestel</h4>
   <h4>Marie-Elisabeth Makohl</h4>
   <h4>Christian Wohlhaupt</h4>	
