changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -119,6 +119,24 @@
 
 
 <div class="mem">
+	  <a href="borges.html"> 
+      <div class="mugshot" style="background-image: url(/img/fb_500.png);"></div>
+      <div class="info">
+        <h3>Filipe Borges</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study surface segmentation through adaptation. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:filipeborges@mail.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="chamani.html"> 
       <div class="mugshot" style="background-image: url(/img/sc_500.png);"></div>
       <div class="info">
