changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -301,6 +301,25 @@
 
 
 <div class="mem">
+	  <a href="tukendorf.html"> 
+      <div class="mugshot" style="background-image: url(/img/mt_500.png);"></div>
+      <div class="info">
+        <h3>Marc Tukendorf</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study replicability and reproducibility: Translating and evaluating a camouflage detection algorithm. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:m.tukendorf@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="zhang.html"> 
       <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
       <div class="info">
