changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -230,6 +230,24 @@
 
 
 <div class="mem">
+	  <a href="rogoza.html"> 
+      <div class="mugshot" style="background-image: url(/img/kr_500.png);"></div>
+      <div class="info">
+        <h3>Karol Rogoza</h3>
+	
+        <p class="title">Bachelor student. In my Bachelor thesis, I study visual perception of depth through different illuminations of 3d generated scenes on the computer screen. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:karol.rogoza@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="schillen.html"> 
       <div class="mugshot" style="background-image: url(/img/as_500.png);"></div>
       <div class="info">
