--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -155,6 +155,25 @@
 
 
 <div class="mem">
+	  <a href="grossmann.html"> 
+      <div class="mugshot" style="background-image: url(/img/sg_500.png);"></div>
+      <div class="info">
+        <h3>Savas Großmann</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study if the human visual system is more sensitive to edges or luminance differences and if we do get similar results from experiments on these two stimuli. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:savas.grossmann@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="hausmann.html"> 
       <div class="mugshot" style="background-image: url(/img/rh_500.png);"></div>
       <div class="info">
