changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -210,6 +210,22 @@
 
 
 
+<div class="mem">
+	  <a href="krause.html"> 
+      <div class="mugshot" style="background-image: url(/img/mk_500.png);"></div>
+      <div class="info">
+        <h3>Marius Krause</h3>
+	
+        <p class="title">Bachelor Student.</p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:krause.2@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
 
 <div class="mem">
 	  <a href="oezkaya.html"> 
