--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -227,25 +227,6 @@
 
 
 <div class="mem">
-	  <a href="rhein.html"> 
-      <div class="mugshot" style="background-image: url(/img/er_500.png);"></div>
-      <div class="info">
-        <h3>Eduardo Luiz Rhein</h3>
-	
-        <p class="title">Bachelor student. In my Bachelor thesis, I study implementing and analyzing content-adaptive subsampling for image compression. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:rhein@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-<div class="mem">
 	  <a href="rogoza.html"> 
       <div class="mugshot" style="background-image: url(/img/kr_500.png);"></div>
       <div class="info">
@@ -264,23 +245,6 @@
 
 
 <div class="mem">
-	  <a href="soerensen.html"> 
-      <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
-      <div class="info">
-        <h3>Jarl-Sebastian Soerensen</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I want to investigate the influence of noise on human edge perception in natural images. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:j.sorensen@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-<div class="mem">
 	  <a href="tukendorf.html"> 
       <div class="mugshot" style="background-image: url(/img/mt_500.png);"></div>
       <div class="info">
@@ -296,23 +260,6 @@
       </a>
     </div>
 
-
-
-<div class="mem">
-	  <a href="zinke.html"> 
-      <div class="mugshot" style="background-image: url(/img/mz500.png);"></div>
-      <div class="info">
-        <h3>Matti Zinke</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study how shading affects the human depth perception. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:m.zinke@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
 
 
  </section>
@@ -461,10 +408,13 @@
   <h4>Jakob Grünwald</h4>
   <h4>Nico Kestel</h4>
   <h4>Marie-Elisabeth Makohl</h4>
+  <h4>Eduardo Luiz Rhein</h4>
   <h4>Annalena Katharina Schillen</h4>
   <h4>Hendrik Schulze Bröring</h4>
   <h4>Enis Can Simsek</h4>
+  <h4>Jarl-Sebastian Sorensen</h4>
   <h4>Christian Wohlhaupt</h4>
+  <h4>Matti Zinke</h4>
   <h4>Wenwen Zhang</h4>
   
 
