changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -71,6 +71,22 @@
     </div>
 
 
+<div class="mem">
+		<a href="soerensen.html"> 
+      <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
+      <div class="info">
+        
+        <h3>Jarl-Sebastian Sorensen</h3>
+       
+        <p class="title">Student research assistant. I study the influence of noise on human edge perception in natural images. </p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:j.sorensen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+       </a>
+    </div>
+
 
     <div class="mem">
 	  <a href="delmestre.html"> 
@@ -97,6 +113,22 @@
 
   <section class="members">
  
+
+<div class="mem">
+	  <a href="arifin.html"> 
+      <div class="mugshot" style="background-image: url(/img/ha_500.png);"></div>
+      <div class="info">
+        <h3>Hafidz Arifin</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I focus on two different methods to study human brightness perception - method of adjustment and brightness ratings. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:h.arifin@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
 
 
 <div class="mem">
@@ -219,6 +251,24 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:iris.oezkaya@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
+	  <a href="park.html"> 
+      <div class="mugshot" style="background-image: url(/img/jp_500.png);"></div>
+      <div class="info">
+        <h3>Ji Hyea Park</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the difference in magnitude of lightness constancy, between real and virtual stimulus. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:jihyea.park.403318@gmail.com"></a></li>
         </ul>
       </div>
       </a>
@@ -412,7 +462,6 @@
   <h4>Annalena Katharina Schillen</h4>
   <h4>Hendrik Schulze Bröring</h4>
   <h4>Enis Can Simsek</h4>
-  <h4>Jarl-Sebastian Sorensen</h4>
   <h4>Christian Wohlhaupt</h4>
   <h4>Matti Zinke</h4>
   <h4>Wenwen Zhang</h4>
