changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -268,7 +268,7 @@
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:jihyea.park.403318@gmail.com"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:jihyea.park@mail.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -287,6 +287,24 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:karol.rogoza@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
+	  <a href="scheibner.html"> 
+      <div class="mugshot" style="background-image: url(/img/lsch_500.png);"></div>
+      <div class="info">
+        <h3>Lisa Scheibner</h3>
+	
+        <p class="title">Bachelor student. In my Bachelor thesis, I study what perceptual scales for simultaneous brightness contrast look like and how to compare them with those of White's effect. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:lisa.scheibner@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
