changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -264,7 +264,7 @@
       <div class="info">
         <h3>Ji Hyea Park</h3>
 	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study the difference in magnitude of lightness constancy, between real and virtual stimulus. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the difference between real and computer-generated stimuli in the domain of lightness perception. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
