changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -330,6 +330,24 @@
 
 
 
+<div class="mem">
+	  <a href="zabel.html"> 
+      <div class="mugshot" style="background-image: url(/img/jz_500.png);"></div>
+      <div class="info">
+        <h3>Jan Zabel</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study how to optimize data acquisition for scaling methods, in particular for MLCM. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:j.zabel@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
  </section>
 
 
