changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -168,6 +168,24 @@
 
 
 <div class="mem">
+	  <a href="dexel.html"> 
+      <div class="mugshot" style="background-image: url(/img/fd_500.png);"></div>
+      <div class="info">
+        <h3>Felix Dexel</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study how the brightness of surfaces is represented in the brain. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:dexel@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="grossmann.html"> 
       <div class="mugshot" style="background-image: url(/img/sg_500.png);"></div>
       <div class="info">
