--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -469,7 +469,7 @@
  <br />
   <h2>Alumni - Bachelor students</h2>
 
-  <h4>Anas Allaham</h4>
+  `Anas Allaham <files/theses/thesis_allaham.pdf>`_
   <h4>Marcus Bindermann</h4> 
   <h4>Yasin Mehmet Cifci</h4> 
   <h4>Jakob Grünwald</h4>
