changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -470,20 +470,21 @@
   <h2>Alumni - Bachelor students</h2>
 
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
-  <h4>Marcus Bindermann</h4> 
+  <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
   <h4>Yasin Mehmet Cifci</h4> 
   <h4>Jakob Grünwald</h4>
-  <h4>Nico Kestel</h4>
+  <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4>Burak Kiran</h4>	
   <h4>Marie-Elisabeth Makohl</h4>
   <h4>Iris Özkaya</h4>
-  <h4>Eduardo Luiz Rhein</h4>
-  <h4>Annalena Katharina Schillen</h4>
-  <h4>Hendrik Schulze Bröring</h4>
-  <h4>Enis Can Simsek</h4>
+  <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
+  <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
+  <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
+  <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4>Christian Wohlhaupt</h4>
-  <h4>Matti Zinke</h4>
-  <h4>Wenwen Zhang</h4>
+  <h4><a href="files/theses/thesis_zhang.pdf">Wenwen Zhang</a></h4>
+  <h4><a href="files/theses/thesis_zinke.pdf">Matti Zinke</a></h4>
+  
   
 
   <h2>Alumni - Master students</h2>
