changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -474,9 +474,9 @@
   <h4>Yasin Mehmet Cifci</h4> 
   <h4>Jakob Grünwald</h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
-  <h4>Burak Kiran</h4>	
+  <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>	
   <h4>Marie-Elisabeth Makohl</h4>
-  <h4>Iris Özkaya</h4>
+  <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
