changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -71,22 +71,6 @@
     </div>
 
 
-<div class="mem">
-		<a href="soerensen.html"> 
-      <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
-      <div class="info">
-        
-        <h3>Jarl-Sebastian Sorensen</h3>
-       
-        <p class="title">Student research assistant. I study the influence of noise on human edge perception in natural images. </p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:j.sorensen@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-       </a>
-    </div>
-
 
     <div class="mem">
 	  <a href="delmestre.html"> 
@@ -481,6 +465,7 @@
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
+  <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
   <h4>Christian Wohlhaupt</h4>
   <h4><a href="files/theses/thesis_zhang.pdf">Wenwen Zhang</a></h4>
   <h4><a href="files/theses/thesis_zinke.pdf">Matti Zinke</a></h4>
