--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -432,7 +432,7 @@
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
-  <h4>Marc Tukendorf</h4>
+  <h4><a href="files/theses/thesis_tukendorf.pdf">Marc Tukendorf</a></h4>
   <h4>Christian Wohlhaupt</h4>
   <h4><a href="files/theses/thesis_zhang.pdf">Wenwen Zhang</a></h4>
   <h4><a href="files/theses/thesis_zinke.pdf">Matti Zinke</a></h4>
