changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -420,8 +420,8 @@
 
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
-  <h4>Yasin Mehmet Cifci</h4> 
-  <h4>Savas Großmann</h4>
+  <h4>Yasin Mehmet Cifci</h4>
+  <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
   <h4>Jakob Grünwald</h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>	
