--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -189,6 +189,24 @@
 
 
 <div class="mem">
+	  <a href="jain.html"> 
+      <div class="mugshot" style="background-image: url(/img/nj_500.png);"></div>
+      <div class="info">
+        <h3>Navdha Jain</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study measuring the perceptual scales of brightness assimilation effect. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:navdha.jain@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="krause.html"> 
       <div class="mugshot" style="background-image: url(/img/mk_500.png);"></div>
       <div class="info">
