changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -194,7 +194,7 @@
       <div class="info">
         <h3>Navdha Jain</h3>
 	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study measuring the perceptual scales of brightness assimilation effect. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I focus on measuring the perceptual scales in brightness assimilation effect. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
