changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -224,6 +224,24 @@
 
 
 <div class="mem">
+	  <a href="ollech.html"> 
+      <div class="mugshot" style="background-image: url(/img/co_500.png);"></div>
+      <div class="info">
+        <h3>Clara Ollech</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study how different parameters in stimuli influence the performance of computational models and where exactly these models differ. </p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:clara.ollech@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="park.html"> 
       <div class="mugshot" style="background-image: url(/img/jp_500.png);"></div>
       <div class="info">
