changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -295,6 +295,23 @@
 
 
 
+<div class="mem">
+	  <a href="schlesier.html"> 
+      <div class="mugshot" style="background-image: url(/img/ts_500.png);"></div>
+      <div class="info">
+        <h3>Tim Schlesier</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, building on an earlier Bachelor thesis by Savas Großmann, I study whether visual perception is more sensitive to edges or differences in brightness. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:t.schlesier@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
 
 <div class="mem">
 	  <a href="zabel.html"> 
