changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -134,24 +134,6 @@
 
 
 <div class="mem">
-	  <a href="chamani.html"> 
-      <div class="mugshot" style="background-image: url(/img/sc_500.png);"></div>
-      <div class="info">
-        <h3>Sam Chamani</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study perception of transparency and contrast in variegated checkerboards with transparent media of low luminance values. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:sam.chamani@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
 	  <a href="dexel.html"> 
       <div class="mugshot" style="background-image: url(/img/fd_500.png);"></div>
       <div class="info">
@@ -199,23 +181,6 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:navdha.jain@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
-	  <a href="krause.html"> 
-      <div class="mugshot" style="background-image: url(/img/mk_500.png);"></div>
-      <div class="info">
-        <h3>Marius Krause</h3>
-	
-        <p class="title">Bachelor Student.</p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:krause.2@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -473,11 +438,13 @@
 
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
+  <h4><a href="files/theses/thesis_chamani.pdf">Sam Chamani</a></h4>
   <h4>Yasin Mehmet Cifci</h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
   <h4>Jakob Grünwald</h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
-  <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>	
+  <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
+  <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>	
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
