changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -352,7 +352,7 @@
   <h2>Alumni - Bachelor students</h2>
 
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
-  <h4>Hafidz Arifin</h4>
+  <h4><a href="files/theses/thesis_arifin.pdf">Hafidz Arifin</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
   <h4>Filipe Borges</h4>
   <h4><a href="files/theses/thesis_chamani.pdf">Sam Chamani</a></h4>
@@ -365,15 +365,15 @@
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
-  <h4>Karol Rogoza</h4>
-  <h4>Lisa Scheibner</h4>
+  <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
+  <h4><a href="files/theses/thesis_scheibner.pdf">Lisa Scheibner</a></h4>
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
   <h4><a href="files/theses/thesis_tukendorf.pdf">Marc Tukendorf</a></h4>
   <h4>Christian Wohlhaupt</h4>
-  <h4>Jan Zabel</h4>
+  <h4><a href="files/theses/thesis_zabel.pdf">Jan Zabel</a></h4>
   <h4><a href="files/theses/thesis_zhang.pdf">Wenwen Zhang</a></h4>
   <h4><a href="files/theses/thesis_zinke.pdf">Matti Zinke</a></h4>
   
