changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -100,6 +100,25 @@
 
 
 <div class="mem">
+	  <a href="brozicevic.html"> 
+      <div class="mugshot" style="background-image: url(/img/pb_500.png);"></div>
+      <div class="info">
+        <h3>Philip Brozicevic</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate to what extent contour segmentations of different observers are consistent and what role the type of noise plays in this. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:brozicevic@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="dexel.html"> 
       <div class="mugshot" style="background-image: url(/img/fd_500.png);"></div>
       <div class="info">
