changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -156,6 +156,24 @@
 
 
 <div class="mem">
+	  <a href="henze.html"> 
+      <div class="mugshot" style="background-image: url(/img/th_500.png);"></div>
+      <div class="info">
+        <h3>Tim Henze</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study frequency manipulation in complex images and evaluate an algorithm from Marius Krause's Bachelor thesis for controlling image contrast. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:t.henze@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="jain.html"> 
       <div class="mugshot" style="background-image: url(/img/nj_500.png);"></div>
       <div class="info">
