changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -209,24 +209,6 @@
 
 
 
-<div class="mem">
-	  <a href="park.html"> 
-      <div class="mugshot" style="background-image: url(/img/jp_500.png);"></div>
-      <div class="info">
-        <h3>Ji Hyea Park</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study the difference between real and computer-generated stimuli in the domain of lightness perception. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:jihyea.park@mail.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
 
 <div class="mem">
 	  <a href="schlesier.html"> 
@@ -401,6 +383,7 @@
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>	
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
+  <h4><a href="files/theses/thesis_park.pdf">Ji Hyea Park</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
   <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
   <h4><a href="files/theses/thesis_scheibner.pdf">Lisa Scheibner</a></h4>
