changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -117,6 +117,24 @@
 
 
 
+<div class="mem">
+	  <a href="castro.html"> 
+      <div class="mugshot" style="background-image: url(/img/dc_500.png);"></div>
+      <div class="info">
+        <h3>Daniel Castro Sanchez</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the investigation of brightness contrast perception: A comparison between e- and traditional paper and monitors. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:daniel.castrosanchez@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
 
 <div class="mem">
 	  <a href="dexel.html"> 
