changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -339,11 +339,11 @@
   <h4>Filipe Borges</h4>
   <h4><a href="files/theses/thesis_chamani.pdf">Sam Chamani</a></h4>
   <h4>Yasin Mehmet Cifci</h4>
-  <h4>Felix Dexel</h4>
+  <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
   <h4>Jakob Grünwald</h4>
   <h4>Tom Ravid Hausmann</h4>
-  <h4>Navdha Jain</h4>
+  <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>	
