--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -155,6 +155,25 @@
 
 
 <div class="mem">
+	  <a href="keil.html"> 
+      <div class="mugshot" style="background-image: url(/img/sk_500.png);"></div>
+      <div class="info">
+        <h3>Sebastian Keil</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis I'm studying two models of brightness perception - ODOG and BIWaM. The focus is to identify the differences between them. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:sebastian.keil.1@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="ollech.html"> 
       <div class="mugshot" style="background-image: url(/img/co_500.png);"></div>
       <div class="info">
