--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -100,6 +100,24 @@
 
 
 <div class="mem">
+	  <a href="boldt.html"> 
+      <div class="mugshot" style="background-image: url(/img/platzhalter_frau_500.png);"></div>
+      <div class="info">
+        <h3>Hannah Boldt</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study at which point does noise masking cause a layer scission. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:h.boldt@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="brozicevic.html"> 
       <div class="mugshot" style="background-image: url(/img/pb_500.png);"></div>
       <div class="info">
