changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -191,6 +191,23 @@
 
 
 
+<div class="mem">
+	  <a href="le.html"> 
+      <div class="mugshot" style="background-image: url(/img/dl_500.png);"></div>
+      <div class="info">
+        <h3>Duc Phan Anh Le</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate the noise masks’ effectivity in Großmann’s experiments on edge detection. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:duc.pa.le@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
 
 <div class="mem">
 	  <a href="mahjoub.html"> 
