changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -266,6 +266,26 @@
 
 
 
+<div class="mem">
+	  <a href="sun.html"> 
+      <div class="mugshot" style="background-image: url(/img/ys_500.png);"></div>
+      <div class="info">
+        <h3>Yiran Sun</h3>
+	
+        <p class="title">Bachelor Student.In my Bachelor thesis, I investigate edge detection in natural images under various noise masks using a spatiotemporal model.  </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:yiran.sun@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+
 
  </section>
 
