changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -323,6 +323,20 @@
 
 
 <div class="mem">
+      <div class="mugshot" style="background-image: url(/img/jg_500.png);"></div>
+      <div class="info">
+        <h3>Jakob Grünwald</h3>
+        <p class="title">M.Sc.</p>
+        <p class="blurb">Jakob explored how scale's variability in MLDS is influenced by how the underlying statistical model is parametrized, and he also evaluated possible ways of optimizing data acquisition for MLDS.</p>
+        <ul class='social-links'>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+<div class="mem">
       <div class="mugshot" style="background-image: url(/img/mj.jpg);"></div>
       <div class="info">
         <h3>Minjung Kim, Ph.D.</h3>
@@ -435,7 +449,6 @@
   <h4>Yasin Mehmet Cifci</h4>
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
-  <h4>Jakob Grünwald</h4>
   <h4>Tom Ravid Hausmann</h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
