changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -285,6 +285,26 @@
 
 
 
+<div class="mem">
+	  <a href="zamanis.html"> 
+      <div class="mugshot" style="background-image: url(/img/kz_500.png);"></div>
+      <div class="info">
+        <h3>Konstantinos Zamanis</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study monitor calibration with unstable gamma function due to temperature dependency. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:k.zamanis@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+
 
 
  </section>
@@ -326,7 +346,7 @@
       <div class="mugshot" style="background-image: url(/img/jg_500.png);"></div>
       <div class="info">
         <h3>Jakob Grünwald</h3>
-        <p class="title">M.Sc.</p>
+        <p class="title">B.Sc.</p>
         <p class="blurb">Jakob explored how scale's variability in MLDS is influenced by how the underlying statistical model is parametrized, and he also evaluated possible ways of optimizing data acquisition for MLDS.</p>
         <ul class='social-links'>
         </ul>
