changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -284,6 +284,23 @@
 
 
 
+<div class="mem">
+	  <a href="widmer.html"> 
+      <div class="mugshot" style="background-image: url(/img/rw_500.png);"></div>
+      <div class="info">
+        <h3>Rhea Widmer</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study improving trial selection for maximum likelihood conjoint measurement for psychophysical experiments. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:rhea.widmer@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
 
 <div class="mem">
 	  <a href="zamanis.html"> 
