changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -481,7 +481,7 @@
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
   <h4><a href="files/theses/thesis_arifin.pdf">Hafidz Arifin</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
-  <h4>Filipe Borges</h4>
+  <h4><a href="files/theses/thesis_borges.pdf">Filipe Borges</a></h4>
   <h4><a href="files/theses/thesis_chamani.pdf">Sam Chamani</a></h4>
   <h4>Yasin Mehmet Cifci</h4>
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
