changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -155,6 +155,25 @@
 
 
 <div class="mem">
+	   <a href="haverkamp.html"> 
+      <div class="mugshot" style="background-image: url(/img/ah_500.png);"></div>
+      <div class="info">
+        <h3>Anna Haverkamp</h3>
+	
+        <p class="title">Master Student. In my Master thesis, I investigate whether the presumed mechanisms underlying human edge perception translate to natural images. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:a.haverkamp@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="henze.html"> 
       <div class="mugshot" style="background-image: url(/img/th_500.png);"></div>
       <div class="info">
